[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "webwarden"
version = "1.0.0"
description = "A powerful CLI tool for web scraping and crawling"
readme = "README.md"
authors = [{name = "Your Name", email = "your.email@example.com"}]
license = {text = "MIT"}
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Text Processing :: Markup :: HTML",
]
requires-python = ">=3.8"
dependencies = [
    "playwright",
    "beautifulsoup4",
    "rich",
]

[project.urls]
Homepage = "https://github.com/your-username/WebWarden"
Repository = "https://github.com/your-username/WebWarden"

[project.scripts]
webwarden = "webwarden.cli:main"

[tool.setuptools.packages.find]
where = ["src"]